# elaboration-zoo

./: .gitignore  Bidirectional.hs  BlogMinimal.hs  Closures.hs  DBIndex.hs  DepTCHoles.hs  Glued.hs  Glued2.hs  Glued3.hs  Glued4.hs  Glued5.hs  GluedEval.hs  GluedMeta.hs  IndNotes.txt  Inductive.hs  LICENSE  LambdaInference.md  Main.hs  Metavar.hs  MetavarLet.hs  MetavarLetSimple.hs  MetavarNoEta.hs  MetavarNoEta2.hs  Minimal.hs  MinimalTC.hs  MinimalTCHoles.hs  Nameful.hs  NoInfer.hs  NoInferNameful.hs  Notes.hs  PostMinimal.hs  Precise7.hs  README.md  STTest.hs  Syntax.hs  nosubst.md  notes.txt  package.yaml  stack.yaml  tcbe.cabal  (+1 more)
.github/workflows/: typos.yaml
01-eval/: Main.hs  README.md  example.txt  package.yaml
01-eval-HOAS/: Main.hs  README.md  package.yaml
01-eval-HOAS-names/: Main.hs  elabzoo-eval-HOAS-names.cabal  example.txt  hie.yaml  package.yaml
01-eval-closures/: Main.hs  README.md  package.yaml
01-eval-closures-debruijn/: Main.hs  README.md  elabzoo-eval-closures-debruijn.cabal  hie.yaml  package.yaml
01-eval-closures-names/: Main.hs  README.md  elabzoo-eval-closures-names.cabal  example.txt  hie.yaml  package.yaml
01-eval-debruijn/: Main.hs  package.yaml
01_Eval/: Main.hs
02-typecheck/: Main.hs  README.md  package.yaml
02-typecheck-HOAS-names/: Main.hs  README.md  elabzoo-typecheck-HOAS-names.cabal  example.txt  hie.yaml  package.yaml  stack.yaml
02-typecheck-closures-debruijn/: Main.hs  README.md  elabzoo-typecheck-closures-debruijn.cabal  hie.yaml  package.yaml  stack.yaml
02_Typecheck/: Main.hs
03-holes/: Main.hs  README.md  elabzoo-holes.cabal  example.txt  hie.yaml  package.yaml  pattern-unification.txt
03-holes-debruijn/: Main.hs  README.md  package.yaml
03-holes-unit-eta/: Main.hs  README.md  elabzoo-holes-unit-eta.cabal  example.txt  hie.yaml  package.yaml  stack.yaml
03_Holes/: Main.hs
04-implicit-args/: Common.hs  Cxt.hs  Elaboration.hs  Errors.hs  Evaluation.hs  Main.hs  Metacontext.hs  Parser.hs  Pretty.hs  README.md  Syntax.hs  Unification.hs  elabzoo-implicit-args.cabal  example.txt  hie.yaml  package.yaml  stack.yaml
04_Implicits/: Main.hs
05-pruning/: Cxt.hs  Elaboration.hs  Evaluation.hs  Main.hs  Metacontext.hs  Parser.hs  Presyntax.hs  Pretty.hs  README.md  Syntax.hs  Unification.hs  Value.hs  elabzoo-pruning.cabal  example.txt  hie.yaml  package.yaml
05-typed-metas/: Common.hs  Cxt.hs  Elaboration.hs  Evaluation.hs  Main.hs  Metacontext.hs  Pretty.hs  README.md  Syntax.hs  Unification.hs  example.txt  notes.txt  package.yaml
06-first-class-poly/: Common.hs  Cxt.hs  Elaboration.hs  Errors.hs  Evaluation.hs  Main.hs  Metacontext.hs  Parser.hs  Presyntax.hs  Pretty.hs  README.md  Syntax.hs  TAGS  Value.hs  bench.stt  bench2.stt  elabzoo-first-class-poly.cabal  examples.txt  ghcissue.txt  hie.yaml  package.yaml  stack.yaml
06-first-class-poly/Cxt/: Type.hs
06-sigma-unification/: Common.hs  Cxt.hs  Elaboration.hs  Errors.hs  Evaluation.hs  Main.hs  Metacontext.hs  Parser.hs  Presyntax.hs  Pretty.hs  README.md  TAGS  Unification.hs  Value.hs  notes2.txt  package.yaml
AIMprez/: .#notes.agda  AIMprez.md  Rules.md  notes.agda  notes.agdai  references.bib
TCBE/: Syntax.hs
elabprez/: prez.md  references.bib
experimental/poly-instantiation/: Agdaissues.txt  Elaboration.hs  Evaluation.hs  Main.hs  Old.hs  Parser.hs  Presyntax.hs  README.md  Types.hs  agdaissue.txt  example.txt  notes.txt  package.yaml
experiments/cumulative/: Main.hs  README.md  elabzoo-cumulative.cabal  package.yaml
experiments/mltt-lock/: Main.hs  README.md  mltt-lock.cabal  package.yaml
experiments/runtime-codegen/: Main.hs  Main2.hs  README.md  example.txt  mltt-runtime-codegen.cabal  package.yaml  stack.yaml
experiments/sigma-unification/: Common.hs  Cxt.hs  Demo.agda  Demo.agdai  Errors.hs  Main.hs  Parser.hs  README.md  Syntax.hs  Unification.hs  UnificationBackup.hs  Value.hs  demo.txt  elabzoo-sigma-unification.cabal  example.txt  notes.txt  notes2.txt  package.yaml
experiments/simple-univ-poly/: Main.hs
experiments/super-mega-poly/: Common.hs  Elaboration.hs  Evaluation.hs  Main.hs  Parser.hs  Presyntax.hs  Pretty.hs  Syntax.hs  Unification.hs  Value.hs  (+2 more)
(+4 files in other folders)
