name:                tcbe
version:             0.1.0.0
synopsis:            Dependent type checking by evaluation
homepage:            http://github.com/AndrasKovacs/tcbe
license:             BSD3
license-file:        LICENSE
author:              Andr치s Kov치cs
maintainer:          puttamalac@gmail.com
copyright:           2016 Andr치s Kov치cs
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tcbe
  default-language: Haskell2010
  main-is: Main.hs
  ghc-options: -rtsopts -O2
  build-depends:
                base,
                bytestring >= 0.10.8.1,
                containers,
                ghc-prim >= 0.4.0.0,
                hashable,
                mtl,
                megaparsec == 6.2.0,
                text >= 1.2.2.1,
                unordered-containers

library
  other-modules:
                Syntax, NoInfer, Minimal, Nameful,
                GluedTC, DBIndex,
                NoInferNameful, MetavarLet
  ghc-options:
                -rtsopts -O2
  build-depends:
                base,
                bytestring >= 0.10.8.1,
                containers,
                ghc,
                ghc-prim >= 0.4.0.0,
                hashable,
                mtl,
                primitive,
                megaparsec == 6.2.0,
                text >= 1.2.2.1,
                unordered-containers

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AndrasKovacs/tcbe
